# rosalind-solutions-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.zed/: settings.json
DNA/: dna.py  rosalind_dna.txt
GC/: gc.py  test_gc.py
HAMM/: hamm.py
PROT/: test_prot.py
REVC/: revc.py  rosalind_revc.txt
RNA/: rna.py  rosalind_rna.txt
SUBS/: subs.py  test_subs.py
rosalind_solutions_py/: __init__.py  __main__.py  cli.py
rosalind_solutions_py/DNA/: __init__.py  dna.py  test_dna.py
rosalind_solutions_py/GC/: __init__.py  gc.py  test_gc.py
rosalind_solutions_py/HAMM/: __init__.py  test_hamm.py
rosalind_solutions_py/PROT/: __init__.py  prot.py
rosalind_solutions_py/REVC/: __init__.py  test_revc.py
rosalind_solutions_py/RNA/: __init__.py  rna.py  test_rna.py
rosalind_solutions_py/SUBS/: __init__.py
